tests/neg/syntax_pp_unclosed_ifdef.baa
// EXPECT: نهاية الملف قبل إغلاق شرط قبلي

#إذا_عرف ميزة_غير_موجودة
صحيح س = ١.
